Started the logic for the game. Initial shuffling is done

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
   <h1>Star Wars RPG!</h1>
-  <section>
-    <img class="character" src="assets/images/obiwan-920x584.png" alt="Obi Wan Kenobi">
-    <img class="character" src="assets/images/anakin-skywalker.jpg" alt="Anakin Skywalker">
-    <img class="character" src="assets/images/darth-tyranus.png" alt="Darth Tyranus">
-    <img class="character" src="assets/images/darth-maul.jpeg" alt="Darth Maul">
+  <section id="starting">
+    <img class="character obi" src="assets/images/obiwan-920x584.png" alt="Obi Wan Kenobi">
+    <img class="character ani" src="assets/images/anakin-skywalker.jpg" alt="Anakin Skywalker">
+    <img class="character ty" src="assets/images/darth-tyranus.png" alt="Darth Tyranus">
+    <img class="character ml" src="assets/images/darth-maul.jpeg" alt="Darth Maul">
   </section>
   <section>
-    <div id="your-character"></div>
-    <div id="enemies"></div>
+    <div id="your-character"><h2>My character</h2></div>
     <div id="fight"></div>
+    <div id="enemy"><h2>My Enemies</h2></div>
+    <button class="attack">Attack</button>
   </section>
 
   
@@ -28,6 +29,6 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  <script rel="text/javascript" src="assets/javascript/game.js"></script>
+  <script rel="text/javascript" src="assets/js/game.js"></script>
 </body>
 </html>
